<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="0dp">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="413dp"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_uang"
            app:title="@string/app_name"
            android:layout_gravity="left"/>


    </com.google.android.material.appbar.AppBarLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/topCardBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="1dp"
        app:cardBackgroundColor="@color/purple_700"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bottomCardBar"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/jumlah_hutang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jumlah_utang"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/jumlah_hutang_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/estimasi_question"
                style="@style/Widget.PinjamanCesLab.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/estimasi_hutang"
                app:layout_constraintStart_toStartOf="@id/jumlah_hutang"
                app:layout_constraintTop_toBottomOf="@id/jumlah_hutang" />

            <RadioGroup
                android:id="@+id/hutang_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/option_harian"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@id/estimasi_question"
                app:layout_constraintTop_toBottomOf="@id/estimasi_question">


                <RadioButton
                    android:id="@+id/option_harian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/harian_service"
                    android:textColor="#00838F" />


                <RadioButton
                    android:id="@+id/option_bulanan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bulanan_service">


                </RadioButton>

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/jumlah_hari_hutang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jumlah_hari_utang"
                app:layout_constraintStart_toStartOf="@id/hutang_options"
                app:layout_constraintTop_toBottomOf="@id/hutang_options"
                tools:layout_editor_absoluteX="32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/jumlah_hari_hutang_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/ajukan_hutang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ajukan_calculate"
                android:textColor="#212121"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/jumlah_hari_hutang"
                app:layout_constraintTop_toBottomOf="@id/jumlah_hari_hutang" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/bottomCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="@id/topCardBar"
            app:layout_constraintStart_toStartOf="@id/topCardBar"
            app:layout_constraintTop_toBottomOf="@id/topCardBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Media -->

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomCardBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        app:cardBackgroundColor="@color/purple_700"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="26dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="36dp"
            app:layout_constraintTop_toBottomOf="@+id/topCardBar"
            tools:layout_editor_absoluteX="61dp">

            <TextView
                android:id="@+id/hutang_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline6"
                tools:text="$" />

            <TextView
                android:id="@+id/hari_result"
                style="@style/Widget.PinjamanCesLab.TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                tools:text="Total Pencairan: " />

            <TextView
                android:id="@+id/bunga_result"
                style="@style/Widget.PinjamanCesLab.TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintTop_toBottomOf="@id/hari_result"
                tools:text="Jumlah Bunga:" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="310dp"
                android:layout_height="157dp"
                android:layout_marginBottom="16dp"
                app:srcCompat="@drawable/terima" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
